# Algorithm-trainer

./: README.md  pyproject.toml
algorithm_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/algtrainer/: cli.py
src/core/: checkers.py  preprocess.py  types.py
src/generators/: graph_gen.py
src/problems/: registry.py
src/problems/graphs/arrays/toposort/: problem.py  toposort.py
tests/: test_preprocess.py  test_problem_flow.py  test_string_checker.py  test_toposort_flow.py
