[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithm-trainer"
version = "0.1.0"
description = "Algorithms Trainer (CLI): generate tasks, check answers, and track progress."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
]

[project.scripts]
algotrainer = "src.algtrainer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
